Write down colours

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Hello, i collect the Blobcat SVGs i have made here. The license is public domain
-/ CC0 unless otherwise noted in the SVGs metadata.
+Hello, i collect Blobcat SVGs i have made here. The license is public domain /
+CC0 unless otherwise noted in the SVGs metadata.
   I used Inkscape to make them, so it's probably best to edit them with
 that. Use raster images for displaying, the SVGs get rendered differently
 everywhere because SVG. 🙄
